--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     padding: 0;
     list-style: none;
     box-sizing: border-box;
-    font-family: 'Exo 2', sans-serif;;
+    font-family: 'Exo 2', sans-serif;
 }
 
 :root{
@@ -54,8 +54,9 @@ button:hover{
 
 .container{
     display: grid;
-    grid-template-columns: minmax(200px, .55fr) 4fr;
-    grid-template-rows: minmax(125px, 150px) 3fr;
+    grid-template-columns: minmax(250px, .55fr) 4fr;
+    /* grid-template-rows: minmax(15rem, 20rem) 4fr; */
+    grid-template-rows: 1fr 7fr;
 }
 
 .sidebar{
@@ -112,9 +113,71 @@ button:hover{
     align-items: center;
     width: 20rem;
 }
+
 .main__content{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+
     grid-row: 2/5;
+    padding: 2rem;
 }
+
+.main__content h2{
+    color: var(--color-white);
+    margin-bottom: 1rem;
+}
+
+.main__content-right{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    width: 15rem;
+}
+
+.main__card{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+
+    background-color: var(--color-primary);
+    border-left: #C72C41 solid .5rem;
+    border-radius: .5rem;
+    width: 25rem;
+    padding: 1rem;
+    color:var(--color-white)
+}
+
+.main__card-icons{
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    gap: 1rem;
+}
+
+.main__projects{
+    width: 100%;
+}
+
+.main__projects-cards{
+    display: grid;
+    /* grid-template-columns: repeat(auto-fit, 1fr);
+    grid-template-rows: 1fr 1fr; */
+
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(400px, .5fr));
+    gap: 2rem;
+}
+
+.announcements__card, .trending__card{
+    background-color: var(--color-white);
+    border-radius: .25em;
+    padding: 1rem;
+    margin: 1rem 2rem 0 0;
+}
+
+
 
 .profile-pic{
     width: 50px;
@@ -128,4 +191,22 @@ button:hover{
 
 .icon{
     width: 25px;
+}
+
+.sidebar{
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+}
+
+.sidebar__main ul li, .sidebar__foot ul li{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.sidebar__main ul, .sidebar__foot ul{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
